--- a/user.yaml
+++ b/user.yaml
@@ -1,10 +1,10 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: admin
+  name: u-admin
 spec:
   profile:
-    displayName: Admin
+    displayName: Usuário Admin
     email: admin@admin.com	
     picture: https://avatars.githubusercontent.com/joaosilva
   memberOf: [admin]
